Fixing order on narrow screens. Creating Basic Page Left pattern. Fixing handling of breakout media block.

--- a/source/css/_layout.wrappers.scss
+++ b/source/css/_layout.wrappers.scss
@@ -144,7 +144,6 @@
 .shift--reversed {
   display: flex;
   flex-wrap: wrap;
-  flex-direction: column-reverse;
   @include media('>large') {
     flex-direction: row-reverse;
   }
